SONAR-12108 Support Java 11 RTE