@@ -24,15 +24,25 @@ import java.util.LinkedHashMap;
 import java.util.Map;
 
 public class WebJvmOptions extends JvmOptions<WebJvmOptions> {
-  public WebJvmOptions(File tmpDir) {
-    super(mandatoryOptions(tmpDir));
+  public WebJvmOptions(File tmpDir, JavaVersion javaVersion) {
+    super(mandatoryOptions(tmpDir, javaVersion));
   }
 
-  private static Map<String, String> mandatoryOptions(File tmpDir) {
+  private static Map<String, String> mandatoryOptions(File tmpDir, JavaVersion javaVersion) {
     Map<String, String> res = new LinkedHashMap<>(3);
     res.put("-Djava.awt.headless=", "true");
     res.put("-Dfile.encoding=", "UTF-8");
     res.put("-Djava.io.tmpdir=", tmpDir.getAbsolutePath());
+
+    if (javaVersion.isAtLeastJava11()) {
+      // avoid illegal reflective access operations done by MyBatis
+      res.put("--add-opens=java.base/java.util=ALL-UNNAMED", "");
+
+      // avoid illegal reflective access operations done by Tomcat
+      res.put("--add-opens=java.base/java.lang=ALL-UNNAMED", "");
+      res.put("--add-opens=java.base/java.io=ALL-UNNAMED", "");
+      res.put("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED", "");
+    }
     return res;
   }
 }
