@@ -21,22 +21,42 @@ package org.sonar.application.command;
 
 import java.io.File;
 import java.io.IOException;
+import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class CeJvmOptionsTest {
   @Rule
   public TemporaryFolder temporaryFolder = new TemporaryFolder();
 
-  @Test
-  public void constructor_sets_mandatory_JVM_options() throws IOException {
-    File tmpDir = temporaryFolder.newFolder();
-    CeJvmOptions underTest = new CeJvmOptions(tmpDir);
+  private File tmpDir;
+  private JavaVersion javaVersion = mock(JavaVersion.class);
+  private CeJvmOptions underTest;
 
+  @Before
+  public void setUp() throws IOException {
+    tmpDir = temporaryFolder.newFolder();
+  }
+
+  @Test
+  public void constructor_sets_mandatory_JVM_options_before_java11() {
+    when(javaVersion.isAtLeastJava11()).thenReturn(false);
+    underTest = new CeJvmOptions(tmpDir, javaVersion);
     assertThat(underTest.getAll()).containsExactly(
       "-Djava.awt.headless=true", "-Dfile.encoding=UTF-8", "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath());
+  }
+
+  @Test
+  public void constructor_sets_mandatory_JVM_options_for_java11() {
+    when(javaVersion.isAtLeastJava11()).thenReturn(true);
+    underTest = new CeJvmOptions(tmpDir, javaVersion);
+    assertThat(underTest.getAll()).containsExactly(
+      "-Djava.awt.headless=true", "-Dfile.encoding=UTF-8", "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath(),
+      "--add-opens=java.base/java.util=ALL-UNNAMED");
   }
 }
